Edit tracker page

--- a/web/assets/css/ie8.css
+++ b/web/assets/css/ie8.css
@@ -9,7 +9,7 @@
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../img/banner.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: auto;
@@ -23,7 +23,7 @@
 /* CTA */
 
 	#cta {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../img/banner.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: auto;
